--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,2 +1,127 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600");
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  color: #6b6c6f; }
+
+.login {
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  height: 100vh; }
+
+.login-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0; }
+  .login-header .main-nav {
+    list-style: none;
+    font-weight: 600; }
+    .login-header .main-nav__item {
+      display: inline; }
+    .login-header .main-nav__link {
+      text-decoration: none;
+      color: #6b6c6f; }
+
+.login-body {
+  flex: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .login-body__slogan {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 0.9rem; }
+  .login-body__header {
+    font-weight: 600;
+    color: #252529;
+    font-size: 1.9rem;
+    margin: 1.5rem 0; }
+  .login-body__container {
+    flex: auto;
+    max-width: 350px; }
+    .login-body__container .input-group {
+      position: relative; }
+      .login-body__container .input-group__label {
+        display: block;
+        padding-left: 0.7rem;
+        margin-top: 1.2rem;
+        margin-bottom: 0.7rem; }
+      .login-body__container .input-group__input {
+        width: 100%;
+        padding-left: 3rem;
+        border-radius: 50px;
+        border: 1px solid #dfdfe0;
+        height: 3rem;
+        font-size: 1.1rem; }
+        .login-body__container .input-group__input::placeholder {
+          color: #d2d3d4; }
+        .login-body__container .input-group__input:focus {
+          outline: none;
+          border: 1px solid #29b1cc;
+          box-shadow: 0 0 5px rgba(41, 177, 204, 0.5); }
+      .login-body__container .input-group__icon {
+        position: absolute;
+        top: 2.9rem;
+        left: 1.2rem;
+        color: #dfdfe0; }
+    .login-body__container .btn-group {
+      margin-top: 2rem;
+      display: flex; }
+      .login-body__container .btn-group .btn {
+        border: 2px solid #29b1cc;
+        border-radius: 10rem;
+        font-size: 1.1rem;
+        padding: 0.9rem;
+        color: #29b1cc;
+        flex: 1;
+        margin-right: 0.9rem;
+        cursor: pointer; }
+        .login-body__container .btn-group .btn--primary {
+          background: #29b1cc;
+          color: #fff;
+          box-shadow: 0 10px 20px rgba(41, 177, 204, 0.3);
+          margin-right: 0;
+          margin-left: 0.9rem; }
+    .login-body__container .help-section {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1.6rem; }
+      .login-body__container .help-section__link {
+        color: #6b6c6f;
+        text-decoration: none;
+        text-align: center; }
+
+.login-fotter {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  padding: 15px 0;
+  font-weight: 500; }
+  .login-fotter__links {
+    list-style: none; }
+  .login-fotter__item {
+    display: inline; }
+  .login-fotter__item:not(:first-of-type)::before {
+    content: "•"; }
+  .login-fotter__link {
+    text-decoration: none;
+    color: #6b6c6f; }
+  .login-fotter .lang {
+    list-style: none; }
+    .login-fotter .lang__item {
+      display: inline; }
+    .login-fotter .lang__item:not(:first-of-type)::before {
+      content: "•"; }
+    .login-fotter .lang__option {
+      text-decoration: none;
+      color: #b8b9bb; }
+      .login-fotter .lang__option--active {
+        color: #6b6c6f; }
