--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -135,7 +135,9 @@ body {
       display: flex;
       flex-direction: column-reverse;
       flex: 1;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.7)), url(../img/photo.png); }
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.7)), url(../img/photo.png);
+      background-size: cover;
+      background-repeat: no-repeat; }
       .slider__row {
         display: flex;
         padding: 2rem;
