--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,6 +209,8 @@ body {
         rgba(0, 0, 0, 0.7)
       ),
       url(../img/photo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 
     &__row {
       display: flex;
