--- a/scss/main.scss
+++ b/scss/main.scss
@@ -125,6 +125,7 @@ body {
         flex: 1;
         margin-right: 0.9rem;
         cursor: pointer;
+        background: #fff;
 
         &--primary {
           background: $primary-color;
